assets/styles/standard.css
/* ... */
/* 480px - 768px */

@media screen and (max-width: 768px) {
    h1 {
        font-size: 52px;
    }

    h2 {
        font-size: 44px;
    }

    h3 {
        font-size: 44px;
    }

    h4 {
        font-size: 24px;
    }

    .global_p {
        font-size: 18px;
    }

    .nav-bar {
        justify-content: center;
        align-items: center;
    }

    .nav-bar>a {
        display: none;
    }

    .nav-bottom {
        display: flex;
        position: fixed;
        bottom: 0;
        left: 0;
        width: 100%;
        height: 88px;
        z-index: 10;

        display: flex;
        justify-content: space-around;
        align-items: center;

        background-color: var(--bg-color-yellow);
        padding: 10px 0;
    }

    .header_section {
        width: 100%;
    }

    .headline-info {
        display: flex;
        flex-direction: column;
        align-items: center;
        flex-wrap: wrap;
        padding-top: 32px;
        padding-left: 30px;
        padding-right: 30px;

        gap: 12px;
    }

    .post-metadata {
        gap: 6px;
        flex-wrap: wrap;
        padding-top: 20px;
    }

    .article-heading-green-p {
        font-size: 20px;
    }

    .headline-card {
        width: 100%;

    }

    .author-info {
        text-align: center;
    }

    .author-name {
        font-size: 18px;
    }

    .author-subheadline {
        font-size: 16px;
    }

    .card-body>p {
        font-size: 16px;
    }

    .pro-tipp-card {
        padding: 120px 50px 0 50px;
    }

    .pro-tipp-button {
        transform: translate(-10%, -90%) rotate(-14deg);
    }

    .share-section {
        padding: 34px 32px;
    }

    .mobile-arrow {
        display: block;
        transform: translate(-180px, 30px);
    }

    .desktop-arrow {
        display: none;
    }

    footer {
        padding: 30px 36px;
        display: flex;
        justify-content: space-between;
        align-items: flex-end;
        margin-bottom: 88px;
    }

    .footer-text-content {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        gap: 8px;
        font-size: 16px;
    }

    .copyright-content {
        order: 3;
    }

    .copyright-content>img {
        height: 20px;
        width: 20px;
        padding: 0;
    }

    .copyright-content p {
        font-size: 16px;
    }

    .social-media-icons {
        display: flex;
        gap: 12px;
        align-items: flex-end;
        justify-content: flex-end;
    }

    .social-media-icons img {
        height: 24px;
        width: 24px;
    }

}

/* 0-479px */

@media screen and (max-width: 480px) {
    h1 {
        font-size: 48px;
    }

    h2 {
        font-size: 40px;
    }

    h3 {
        font-size: 40px;
    }

    h4 {
        font-size: 20px;
        padding: 70px 16px 0 16px;
    }

    .global_p {
        font-size: 1rem;
        padding: 0 16px;
    }

    .nav-bar {
        justify-content: center;
        align-items: center;
    }

    .nav-bar>a {
        display: none;
    }

    .nav-bottom {
        display: flex;
        position: fixed;
        bottom: 0;
        left: 0;
        width: 100%;
        height: 88px;
        z-index: 10;

        display: flex;
        justify-content: space-around;
        align-items: center;

        background-color: var(--bg-color-yellow);
        padding: 10px 0;
    }

    .header_section {
        width: 100%;
    }

    .headline-info {
        flex-wrap: wrap;
        padding-top: 24px;
        padding-left: 15px;
        padding-right: 15px;
        gap: 12px;
    }

    .post-metadata {
        gap: 6px;
        flex-wrap: wrap;
        padding-top: 20px;
    }

    .article-heading-green-p {
        font-size: 20px;
    }

    .headline-card {
        width: 100%;

    }

    .author-info {
        text-align: center;
    }

    .author-name {
        font-size: 18px;
    }

    .author-subheadline {
        font-size: 16px;
    }

    .card-body>p {
        font-size: 16px;
    }

    .pro-tipp-card {
        padding: 100px 16px 32px 15px;
    }

    .pro-tipp-content {
        padding: 32px 16px 32px 20px;
    }

    .pro-tipp-button {
        transform: translate(0%, -90%) rotate(-10deg);
    }

    .share-section {
        padding: 32px 15px;
    }

    .share-card {
        padding-top: 50px;
    }

    .share-section>p {
        font-size: 1.125rem;
    }

    .mobile-arrow {
        transform: translate(-120px, 0);
    }

    footer {
        padding: 30px 24px;
        display: flex;
        justify-content: space-between;
        align-items: flex-end;
        margin-bottom: 88px;
    }

    .footer-text-content {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        gap: 8px;
        font-size: 16px;
    }

    .copyright-content {
        order: 3;
    }

    .copyright-content>img {
        height: 20px;
        width: 20px;
        padding: 0;
    }

    .copyright-content p {
        font-size: 16px;
    }

    .social-media-icons {
        display: flex;
        gap: 12px;
        align-items: flex-end;
        justify-content: flex-end;
    }

    .social-media-icons img {
        height: 20px;
        width: 20px;
    }


}

